# openclaw-feishu-cron-kit

./: .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: auto-pr-review.yml
docs/: agent-onboarding.md  migrate-from-legacy-openclaw.md  openclaw-runtime-workflow.md  presentation-schema.md  release-notes-2026-03-18.md  template-contract.md
examples/: cron-delivery.example.json  jobs-spec.example.json  jobs.example.json
scripts/: bootstrap_runtime.py  deliver_cron_payloads.py  materialize_template_presentations.py  review_pr.py  scaffold_agent_task.py  sync_openclaw_jobs.py  sync_workspace_memory_rules.py
src/openclaw_feishu_cron_kit/: __init__.py  core.py  cron_wrapper.py  jobs_sync.py  memory_rules.py  presentation_presets.py  renderer.py
tests/: test_cron_wrapper.py  test_memory_rules.py  test_renderer.py  test_runtime_and_jobs_sync.py
