[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-feishu-delivery"
version = "0.1.0"
description = "Feishu delivery foundation for OpenClaw agents, scheduled jobs, and conversation results."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mileson" }
]
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
